--- a/public/css/aggregator/style.css
+++ b/public/css/aggregator/style.css
@@ -480,6 +480,51 @@ footer{
     font-size: 16px;
 }
 
+/* Вывод ошибок на разных страницах*/
+.container_news_alert_error{
+    width: 700px;
+    height: 30px;
+}
+
+.add_news_alert_error {
+    width: 700px;
+    height: 30px;
+    border: 2px solid red;
+    padding: 3px 15px;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+.text_news_error{
+    margin: 0;
+    padding: 0;
+}
+.container_category_alert_error {
+    width: 300px;
+    height: 60px;
+    margin-top: 5px;
+}
+.add_category_alert_error {
+    width: 300px;
+    height: 60px;
+    border: 2px solid red;
+    padding: 3px 15px;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+.container_feedback_alert_error {
+    width: 400px;
+    height: 40px;
+    margin-top: 5px;
+}
+.add_feedback_alert_error {
+    width: 400px;
+    height: 40px;
+    border: 2px solid red;
+    padding: 3px 15px;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+
 /* Медиа-запросы */
 @media screen and (max-width: 1550px) {
     .container{
